--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea/
+
 # Created by httpswww.toptal.comdevelopersgitignoreapiwindows,python,pycharm,visualstudiocode
 # Edit at httpswww.toptal.comdevelopersgitignoretemplates=windows,python,pycharm,visualstudiocode
 
